# flowprov

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
examples/flow_simulator/: flows.py  inject_drift.py  run.py
examples/n8n_workflows/: 01_triage.json  README.md
flowprov/: __init__.py  cli.py  config.py  db.py  drift.py  embeddings.py  llm.py  models.py  notify.py  replay.py  schemas.py  service.py
flowprov/api/: app.py  routes_dashboard.py  routes_ingest.py
flowprov/api/templates/: base.html  flow_detail.html  index.html  replay.html
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: bootstrap.sh
tests/: conftest.py  test_embeddings.py  test_llm.py  test_service.py
